tkfmのbuild.gradleをコピーした #11